--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
         <link rel="stylesheet" href="css/normalize.css" />
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/mobile.css" />
+        <link rel="stylesheet" href="css/animation.css" />
         <link rel="icon" type="image/png" href="images/favicon.png" />
     </head>
 
     <body>
-        <nav>
+        <nav class="fadeInDown">
             <div class="brand_image">
                 <img src="images/fixit-logo.png" alt="fixit logotipo" />
             </div>
@@ -24,13 +25,13 @@
                 </ul>
             </div>
         </nav>
-        <div class="main_section">
+        <div class="main_section fadeIn">
             <h1>
                 Podemos reparar cualquier telefono, <br />¿Que tipo de problemas tienes?
             </h1>
         </div>
         <div class="servicios">
-            <div class="servicio">
+            <div class="servicio fadeInUp">
                 <div class="content">
                     <div class="image_content">
                         <img
@@ -48,7 +49,7 @@
                     <button href="#" class="main_button">Solicitar dignostico</button>
                 </div>
             </div>
-            <div class="servicio">
+            <div class="servicio fadeInUp">
                 <div class="content">
                     <div class="image_content">
                         <img
